--- a/crm.html
+++ b/crm.html
@@ -33,8 +33,8 @@
       
         <label class="fieldset__label" for="discount">Дисконт</label>
         <div class="fieldset__optional">
-          <input class="fieldset__checkbox" aria-label="Добавить скидку" type="checkbox" required>
-          <input class="fieldset__input" id="discount" type="number" name="discount" disabled required>
+          <input class="fieldset__checkbox" aria-label="Добавить скидку" type="checkbox">
+          <input class="fieldset__input" id="discount" type="number" name="discount" disabled>
         </div>
             
         <label  class="fieldset__label" for="description">Описание</label>
