--- a/crm.html
+++ b/crm.html
@@ -10,10 +10,9 @@
   <title>CRM</title>
 </head>
 <body>
-  <div class="mobile">
-    <div class="overlay"></div>
+  <div class="overlay">
     <div class="popup">
-      <button class="close">
+      <button type="button" class="popup__close">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
           <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
